<resources>
    <string name="app_name">NewsApp</string>
    <string name="headlines">Headlines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="saved">Saved</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="category">Category</string>
    <string name="search_keyword">keyword to search for</string>
    <string name="enter_search">Enter \"Keyword\" or \"phrase\" to search</string>
    <string name="search">Search</string>
    <string name="no_data_available">No data Available</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="language_country">Language &amp; Country</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="other">Others</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>

</resources>