<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/buttons">
        <item
            android:id="@+id/headlines"
            android:icon="@drawable/headlines"
            android:title="@string/headlines" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/saved"
            android:icon="@drawable/saved"
            android:title="@string/saved" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/searchicon"
            android:title="@string/search" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>