<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:selectable="false"
        android:title="@string/language_country"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:key="lang"
            android:selectable="false"
            app:iconSpaceReserved="false"
            app:title="@string/language" />
        <EditTextPreference
            android:key="country"
            android:selectable="false"
            app:iconSpaceReserved="false"
            app:title="@string/country" />
    </PreferenceCategory>
    <PreferenceCategory
        android:selectable="false"
        android:title="@string/other"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:defaultValue="rehan@gmail.com"
            android:selectable="false"
            app:iconSpaceReserved="false"
            app:title="@string/contact"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="about"
            android:title="About" />
    </PreferenceCategory>
</PreferenceScreen>