<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        style="@style/chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categoryChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:checkedChip="@id/health"
            app:chipSpacing="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/health"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/health"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/business"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:selectAllOnFocus="false"
                android:text="@string/business"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/science"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/science"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/technology"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/technology"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sports"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/sports"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/entertainment"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/entertainment"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/chip_textcolor"
                android:theme="@style/chips"
                app:chipBackgroundColor="@color/chip_selection_bg"
                app:chipCornerRadius="4dp"
                app:chipStrokeColor="#B3B0B0"
                app:chipStrokeWidth="1dp" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/everything_recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ProgressBar
        android:id="@+id/everything_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    


</androidx.constraintlayout.widget.ConstraintLayout>